--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,32 @@
+nav {
+    z-index: 3;
+}
+
 header {
     height: 100vh;
+}
+
+header h1 {
+    letter-spacing: 2px;
+}
+
+section {
+    background-color: #000;
+    height: 100vh;
+}
+
+section img{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    opacity: 0.5;
+}
+
+section div{
+    z-index: 2;
+}
+
+section a {
+    letter-spacing: 1px;
 }
